Support for XPM PrimeCoin

--- a/code-sample.html
+++ b/code-sample.html
@@ -3,21 +3,22 @@
 <body>
 	
 	<script src="coin.js"></script>
+
 	<script>
 	CoinWidgetCom.go({
 
 		/* make sure you update the wallet_address or you will not get your donations */
-		wallet_address: "122MeuyZpYz4GSHNrF98e6dnQCXZfHJeGS"
+		wallet_address: "APjSeBUGUEKj1n1kzvMT1N89DxMM2Ttvce"
 
-		, currency: "bitcoin"
+		, currency: "primecoin"
 		, counter: "count"
 		, alignment: "bl"
 		, qrcode: true
 		, auto_show: false
 		, lbl_button: "Donate"
-		, lbl_address: "Donate Bitcoin to this Address:"
+		, lbl_address: "Donate Primecoin to this Address:"
 		, lbl_count: "donations"
-		, lbl_amount: "BTC"
+		, lbl_amount: "XPM"
 	});
 	</script>
 
@@ -26,7 +27,8 @@
 			BTC: 122MeuyZpYz4GSHNrF98e6dnQCXZfHJeGS
 			LTC: LY1L6M6yG26b4sRkLv4BbkmHhPn8GR5fFm
 				~ Thank you!
-
+		For XPM fork:
+			XPM: APjSeBUGUEKj1n1kzvMT1N89DxMM2Ttvce
 
 		MIT License (MIT)
 
